--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
+	<head>
+		<link rel="stylesheet" href="style.css">
+	</head>
 	<body>
 		<H1>Sito di prova</H1>
 		<p>questo sito è per provare git</p>
+		<p>il programmatore B ti pusha</p>
 	</body>
 </html>
